--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body class="bg-gray-100 min-h-screen p-4 flex flex-col items-center">
 
     <!-- Main Container -->
-    <div class="max-w-6xl w-full bg-white rounded-xl shadow-lg p-6 md:p-10 my-8">
+    <div class="w-full bg-white rounded-xl shadow-lg p-6 md:p-10 my-8">
 
         <!-- Header Section -->
         <header class="text-center mb-8">
@@ -270,3 +270,4 @@
     </script>
 </body>
 </html>
+
