--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <!-- Header Section -->
         <header class="text-center mb-8">
-            <h1 class="text-3xl md:text-5xl font-bold text-gray-800 mb-2">The Global State of Crisis Intervention Services</h1>
+            <h1 class="text-3xl md:text-5xl font-bold text-gray-800 mb-2">The Global List of Crisis Intervention Services</h1>
             <p class="text-md md:text-lg text-gray-600">A Comprehensive Directory</p>
         </header>
 
